Add custom date and time type, add manager for datetime initialization
