# api_new/internal/openapi/v1/real_estate_api_types.gen.go
@@ -1,0 +1,117 @@
+// Package openapi provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
+package openapi
+
+// Defines values for ErrorType.
+const (
+	ErrorTypeDataCreationFailed ErrorType = "data_creation_failed"
+
+	ErrorTypeInternalError ErrorType = "internal_error"
+
+	ErrorTypeInvalidCredential ErrorType = "invalid_credential"
+
+	ErrorTypeOperationNotCompleted ErrorType = "operation_not_completed"
+
+	ErrorTypePermissionDenied ErrorType = "permission_denied"
+
+	ErrorTypeRequestNotFound ErrorType = "request_not_found"
+
+	ErrorTypeUnsupportedMediaType ErrorType = "unsupported_media_type"
+
+	ErrorTypeValidationFailed ErrorType = "validation_failed"
+)
+
+// Authentication response data
+type AuthenticationResponse struct {
+	// User email
+	Email *string `json:"email,omitempty"`
+
+	// JWT token
+	Token *string `json:"token,omitempty"`
+}
+
+// エラー
+type Error struct {
+	// エラーの詳細な説明
+	Detail string `json:"detail"`
+
+	// エラー詳細のリスト
+	Errors *[]ErrorDetail `json:"errors,omitempty"`
+
+	// エラー概要
+	Title string `json:"title"`
+
+	// エラー種別:
+	//   * `validation_failed`: リクエストボディやパラメータのバリデーションエラー
+	//   * `operation_not_completed`: 処理待ちや処理中のリクエストに対し、ファイルダウンロードや削除を要求した
+	//   * `invalid_credential`: 認証・認可情報が不正
+	//   * `permission_denied`: APIを実行する権限がない
+	//   * `request_not_found`: 指定された作成要求IDが存在しない
+	//   * `data_creation_failed`: 作成要求を受けたが、その後の処理でデータやファイル生成に失敗した
+	//   * `unsupported_media_type`: APIでサポートされていないリクエスト形式。Content-Type が不正な場合など。
+	//   * `internal_error`: 内部エラー
+	Type ErrorType `json:"type"`
+}
+
+// エラー種別:
+//   * `validation_failed`: リクエストボディやパラメータのバリデーションエラー
+//   * `operation_not_completed`: 処理待ちや処理中のリクエストに対し、ファイルダウンロードや削除を要求した
+//   * `invalid_credential`: 認証・認可情報が不正
+//   * `permission_denied`: APIを実行する権限がない
+//   * `request_not_found`: 指定された作成要求IDが存在しない
+//   * `data_creation_failed`: 作成要求を受けたが、その後の処理でデータやファイル生成に失敗した
+//   * `unsupported_media_type`: APIでサポートされていないリクエスト形式。Content-Type が不正な場合など。
+//   * `internal_error`: 内部エラー
+type ErrorType string
+
+// エラー詳細
+type ErrorDetail struct {
+	// エラーとなった項目
+	Name string `json:"name"`
+
+	// エラー理由
+	Reason string `json:"reason"`
+
+	// エラーとなったリソース
+	Resource string `json:"resource"`
+}
+
+// Login request data
+type LoginRequest struct {
+	// User email
+	Email string `json:"email"`
+
+	// User password
+	Password string `json:"password"`
+}
+
+// User registration request data
+type RegistrationRequest struct {
+	// User email
+	Email string `json:"email"`
+
+	// User password
+	Password string `json:"password"`
+
+	// User password confirmation
+	PasswordConfirmation string `json:"password_confirmation"`
+}
+
+// エラー
+type BadRequest Error
+
+// エラー
+type InvalidCredential Error
+
+// LoginJSONBody defines parameters for Login.
+type LoginJSONBody LoginRequest
+
+// RegisterJSONBody defines parameters for Register.
+type RegisterJSONBody RegistrationRequest
+
+// LoginJSONRequestBody defines body for Login for application/json ContentType.
+type LoginJSONRequestBody LoginJSONBody
+
+// RegisterJSONRequestBody defines body for Register for application/json ContentType.
+type RegisterJSONRequestBody RegisterJSONBody
